--- a/Web Developer/index.html
+++ b/Web Developer/index.html
@@ -6,11 +6,11 @@
     <title> Casiban Gwapo</title>
    
 </head>
-    <h5> Name: Ente, John Jever B.
-    <h5> Age: 21<h5>
-    <h5> Adress: Pajac, Lapu-Lapu City
+    <h5> Name: Reynaldo Casiban JR.
+    <h5> Age: 25<h5>
+    <h5> Adress: Marigondon, Lapu-Lapu City
     <h5> Gender: Male </h5>
-    <h5> Description of yourself: The more you read, The more things you will know</h5>
+    <h5> Description of yourself: Always Gwapo, my love Anya</h5>
 <body>
     
     <p> GE4 - Purposive Communication - 8:00-9:00AM - C. Blasco
